@@ -501,6 +501,7 @@ class TestFtpAuthentication(unittest.TestCase):
 
     def setUp(self):
         self.server = FTPd()
+        self.server.handler._auth_failed_timeout = 0
         self.server.start()
         self.client = ftplib.FTP()
         self.client.connect(self.server.host, self.server.port)
@@ -508,6 +509,7 @@ class TestFtpAuthentication(unittest.TestCase):
         self.dummyfile = StringIO.StringIO()
 
     def tearDown(self):
+        self.server.handler._auth_failed_timeout = 5
         self.client.close()
         self.server.stop()
         if not self.file.closed:
@@ -521,27 +523,24 @@ class TestFtpAuthentication(unittest.TestCase):
 
     def test_anon_auth(self):
         self.client.login(user='anonymous', passwd='anon@')
-        self.client.login(user='AnonYmoUs', passwd='anon@')
         self.client.login(user='anonymous', passwd='')
+        self.assertRaises(ftplib.error_perm, self.client.login, 'AnoNymouS')
 
-    # Commented after delayed response on wrong credentials has been
-    # introduced because tests take too much to complete.
+    def test_auth_failed(self):
+        self.assertRaises(ftplib.error_perm, self.client.login, USER, 'wrong')
+        self.assertRaises(ftplib.error_perm, self.client.login, 'wrong', PASSWD)
+        self.assertRaises(ftplib.error_perm, self.client.login, 'wrong', 'wrong')
 
-##    def test_auth_failed(self):
-##        self.assertRaises(ftplib.error_perm, self.client.login, USER, 'wrong')
-##        self.assertRaises(ftplib.error_perm, self.client.login, 'wrong', PASSWD)
-##        self.assertRaises(ftplib.error_perm, self.client.login, 'wrong', 'wrong')
-
-##    def test_max_auth(self):
-##        self.assertRaises(ftplib.error_perm, self.client.login, USER, 'wrong')
-##        self.assertRaises(ftplib.error_perm, self.client.login, USER, 'wrong')
-##        self.assertRaises(ftplib.error_perm, self.client.login, USER, 'wrong')
-##        # If authentication fails for 3 times ftpd disconnects the
-##        # client.  We can check if that happens by using self.client.sendcmd()
-##        # on the 'dead' socket object.  If socket object is really
-##        # closed it should be raised a socket.error exception (Windows)
-##        # or a EOFError exception (Linux).
-##        self.assertRaises((socket.error, EOFError), self.client.sendcmd, '')
+    def test_max_auth(self):
+        self.assertRaises(ftplib.error_perm, self.client.login, USER, 'wrong')
+        self.assertRaises(ftplib.error_perm, self.client.login, USER, 'wrong')
+        self.assertRaises(ftplib.error_perm, self.client.login, USER, 'wrong')
+        # If authentication fails for 3 times ftpd disconnects the
+        # client.  We can check if that happens by using self.client.sendcmd()
+        # on the 'dead' socket object.  If socket object is really
+        # closed it should be raised a socket.error exception (Windows)
+        # or a EOFError exception (Linux).
+        self.assertRaises((socket.error, EOFError), self.client.sendcmd, '')
 
     def test_rein(self):
         self.client.login(user=USER, passwd=PASSWD)
